feat: config jest for unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,10 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  },
+  "exclude": ["./coverage", "./dist", "./test", "jest.config.js"],
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true
   }
 }
