--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "start": "node ./dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --setupFiles dotenv/config"
   },
   "author": "",
   "license": "ISC",
@@ -17,19 +17,25 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.10.2",
     "mongoose": "^6.8.1",
-    "multer": "^1.4.5-lts.1",
-    "typescript": "^4.9.4"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
